--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <button onclick="location.href='lab2.2.html'">Lab 2.2</button>
         <button onclick="location.href='lab2.3.html'">Lab 2.3</button>
         <button onclick="location.href='lab2.4.html'">Lab 2.4</button>
+        <button onclick="location.href='lab3.1.html'">Lab 3.1</button>
+        <button onclick="location.href='lab3.2.html'">Lab 3.2</button>
     </div>
 </body>
 </html>
