--- a/lab3.1.html
+++ b/lab3.1.html
@@ -93,6 +93,12 @@ body {
 
 <body>
 
+    <div class="button-container">
+        <a href="index.html" class="button">Homepage</a>
+        <a href="lab3.1.html" class="button">Lab3.1</a>
+        <a href="lab3.2.html" class="button">Lab3.2</a>
+    </div>
+
 	<h1>Drawing with data - Scatter Plot </h1>
 
     <script>
