--- a/lab3.2.html
+++ b/lab3.2.html
@@ -28,10 +28,50 @@ h1 {
     margin-top: 20px;
 }
 
-footer {
+button {
+			margin: 5px;
+			padding: 10px 20px;
+			cursor: pointer;
+			font-size: 1em;
+			border: none;
+			border-radius: 5px;
+			background-color: #2c3e50;
+			color: white;
+			transition: background-color 0.3s ease;
+		}
+
+		button:hover {
+			background-color: #1abc9c;
+		}
+
+        .button-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #2c3e50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1em;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
+            margin: 5px;
+        }
+
+        .button:hover {
+            background-color: #1a242f;
+        }
+
+        /* Footer styles */
+        footer {
             text-align: center;
             padding: 10px;
-            margin-top: 20px;
+            margin-top: 30px;
             background-color: #2c3e50;
             color: white;
             position: fixed;
@@ -40,6 +80,11 @@ footer {
         }
 </style>
 <body>
+    <div class="button-container">
+        <a href="index.html" class="button">Homepage</a>
+        <a href="lab3.1.html" class="button">Lab3.1</a>
+        <a href="lab3.2.html" class="button">Lab3.2</a>
+    </div>
 
     <h1>Scaled Scatter Plot with Axis</h1>
 
