--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <button onclick="location.href='lab2.4.html'">Lab 2.4</button>
         <button onclick="location.href='lab3.1.html'">Lab 3.1</button>
         <button onclick="location.href='lab3.2.html'">Lab 3.2</button>
+        <button onclick="location.href='lab5.1.html'">Lab 5.1</button>
+        <button onclick="location.href='lab5.2.html'">Lab 5.2</button>
+        <button onclick="location.href='lab6.1.html'">Lab 6.1</button>
+        <button onclick="location.href='lab6.2.html'">Lab 6.2</button>
     </div>
 </body>
 </html>
