--- a/lab5.1.html
+++ b/lab5.1.html
@@ -74,7 +74,7 @@
 <div class="container">
     <div class="button-container">
         <a href="index.html" class="button">Homepage</a>
-        <a href="Lab5.2.html" class="button">Lab5.2</a>
+        <a href="lab5.2.html" class="button">Lab5.2</a>
         <button id="updateButton" class="button">Update Once</button>
     </div>
     <svg width="500" height="250"></svg>
