--- a/lab5.2.html
+++ b/lab5.2.html
@@ -73,7 +73,7 @@
 <div class="container">
     <div class="button-container">
         <a href="index.html" class="button">Homepage</a>
-        <a href="Lab5.1.html" class="button">Lab5.1</a>
+        <a href="lab5.1.html" class="button">Lab5.1</a>
         <button id="updateButton" class="button">Update</button>
         <button id="transition1Button" class="button">Transition 1</button>
         <button id="transition2Button" class="button">Transition 2</button>
