--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <button onclick="location.href='lab3.2.html'">Lab 3.2</button>
         <button onclick="location.href='lab5.1.html'">Lab 5.1</button>
         <button onclick="location.href='lab5.2.html'">Lab 5.2</button>
+        <button onclick="location.href='lab5.3.html'">Lab 5.3</button>
         <button onclick="location.href='lab6.1.html'">Lab 6.1</button>
         <button onclick="location.href='lab6.2.html'">Lab 6.2</button>
     </div>
